--- a/src/main/resources/templates/familyMembers/familyMembersInfo.html
+++ b/src/main/resources/templates/familyMembers/familyMembersInfo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>同住家庭成员</title>
 
     <script src="../static/plugins/jQuery/jquery-2.2.3.min.js"></script>
     <link rel="stylesheet" href="../static/plugins/bootstrap/css/bootstrap.min.css">
@@ -72,81 +72,143 @@
             });
         }
 
+        //验证
+        $scope.verification = function(data){
+            console.log(data);
+            var msg = true;
+            var spareInt = data.spareInt;
+            var familyNumber = data.familyNumber;
+            var familyName = data.familyName;
+            var familySex = data.familySex;
+            var familyBrithday = data.familyBrithday;
+            var familyVaccine = data.familyVaccine;
+            var familyLearn = data.familyLearn;
+            if (spareInt == null || spareInt == ''){
+                alert("请选择关系信息！！！")
+                msg = false;
+            }else if (familyNumber == null || familyNumber == ''){
+                alert("请输入公民身份证号信息！！！")
+                msg = false;
+            }else if (familyName==null || familyName == ''){
+                alert("请输入姓名信息！！！")
+                msg = false;
+            }else if (familySex == null){
+                alert("请选择性别信息！！！")
+                msg = false;
+            }else if (familyBrithday == null || familyBrithday == ''){
+                alert("请选择出生日期！！！")
+                msg = false;
+            }else if (familyVaccine==null){
+                alert("请选择有无预防接种证信息！！！")
+                msg = false;
+            }else if (familyLearn==null){
+                alert("请选择是否在本市就学信息！！！")
+                msg = false;
+            }
+            return msg;
+        }
+
         //保存同住家庭成员信息
         $scope.obj={};
         $scope.save = function () {
             var data = $scope.obj
-            console.log(data);
-           $http({
-                method: 'POST',
-                url: '/familyMembers/saveFamilyInfo',
-                params:data
-            }).then(function successCallback(response) {
-               if (response.data>0){
-                   alert("保存成功!")
-               }else {
-                   alert("保存失败!")
-               }
-                // 请求成功执行代码
-            }, function errorCallback(response) {
-                // 请求失败执行代码
-            });
+            var msg = $scope.verification(data);
+            if (msg){
+                $http({
+                    method: 'POST',
+                    url: '/familyMembers/saveFamilyInfo',
+                    params:data
+                }).then(function successCallback(response) {
+                    if (response.data>0){
+                        alert("保存成功!")
+                        location.reload();
+                    }else {
+                        alert("保存失败!")
+                    }
+                    // 请求成功执行代码
+                }, function errorCallback(response) {
+                    // 请求失败执行代码
+                });
+            }
+        }
+
+        $scope.next = function () {
+            window.location.href = "/familyPlanning/toFamilyPlanningInfo"
         }
 
     })
 </script>
 <body ng-app="myApp" ng-controller="myCtrl">
+    <!--<div align="center" style="border: 1px solid black; width: 100%; height: 130px">
+        <div style="border: 1px solid black; width: 50%;height: 50px; margin-top: 20px">
+            <div style="margin-top: 10px"><span style="font-size: 20px">流动人口服务管理系统</span></div>
+        </div>
+        <div style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 217px;">个人信息</div>
+        <div style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px;">配偶信息</div>
+        <div style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px;">同住家庭成员</div>
+        <div style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px;">计生信息</div>
+        <div style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px;">就业信息</div>
+        <div style="border: 1px solid black; width: 100px; height: 25px; margin-top: 10px; float: left; margin-left: 50px;">居住信息</div>
+    </div>
+    <div style="border: 2px solid black; width: 100%; height: 1px"></div>-->
+    <div align="center" style="border: 1px solid black; background-color: #00c0ef; width: 100%;height: 50px;">
+        <div style="border: 1px solid black; background-color: white; width: 50%;height: 30px; margin-top: 10px;"><span style="font-size: 20px">同住家庭成员信息</span></div>
+    </div>
     <div>
-    <table id="dataList" class="table">
-        <thead>
-        <tr>
-            <th>编号</th>
-            <th>关系</th>
-            <th>公民身份证号</th>
-            <th>姓名</th>
-            <th>性别</th>
-            <th>出生日期</th>
-            <th>有无预防接种证</th>
-            <th>是否在本市就学</th>
-        </tr>
-        </thead>
-        <tbody id="tbody">
-        <tr>
-            <th>编号</th>
-            <th>
-                <select id="spareInt" ng-model="obj.spareInt"  name="spareInt">
-                    <option ng-repeat="x in relationship" ng-value="x.id">{{x.name}}</option>
-                </select>
-            </th>
-            <th>
-                <input type="text" ng-model="obj.familyNumber" name="familyNumber">
-            </th>
-            <th>
-                <input type="text" ng-model="obj.familyName" name="familyName">
-            </th>
-            <th>
-                <input type="radio" ng-model="obj.familySex" name="familySex" ng-value="1"/>男
-                <input type="radio" ng-model="obj.familySex" name="familySex" ng-value="0"/>女
-            </th>
-            <th>
-                <input type="date" ng-model="obj.familyBrithday" name="familyBrithday">
-            </th>
-            <th>
-                <input type="radio" ng-model="obj.familyVaccine" name="familyVaccine" ng-value="1"/>有
-                <input type="radio" ng-model="obj.familyVaccine" name="familyVaccine" ng-value="0"/>无
-            </th>
-            <th>
-                <input type="radio" ng-model="obj.familyLearn" name="familyLearn" ng-value="1"/>是
-                <input type="radio" ng-model="obj.familyLearn" name="familyLearn" ng-value="0"/>否
-            </th>
-        </tr>
-        </tbody>
-    </table>
-        <center>
-            <button class="btn btn-success" data-toggle="modal" data-target="#chage" ng-click="save()" >保 存</button>
-            <button class="btn btn-success" data-toggle="modal" data-target="#chage" ng-click="" >下一项</button>
-        </center>
-    <tm-pagination conf="paginationConf"></tm-pagination>
-</div>
+        <table id="dataList" class="table">
+            <thead>
+            <tr>
+                <th>编号</th>
+                <th>关系</th>
+                <th>公民身份证号</th>
+                <th>姓名</th>
+                <th>性别</th>
+                <th>出生日期</th>
+                <th>有无预防接种证</th>
+                <th>是否在本市就学</th>
+            </tr>
+            </thead>
+            <tbody id="tbody">
+            <tr>
+                <th>编号</th>
+                <th>
+                    <select id="spareInt" ng-model="obj.spareInt"  name="spareInt">
+                        <option value="">请选择</option>
+                        <option ng-repeat="x in relationship" ng-value="x.id">{{x.name}}</option>
+                    </select>
+                </th>
+                <th>
+                    <input type="text" ng-model="obj.familyNumber" name="familyNumber" placeholder="请输入...">
+                </th>
+                <th>
+                    <input type="text" ng-model="obj.familyName" name="familyName" placeholder="请输入...">
+                </th>
+                <th>
+                    <input type="radio" ng-model="obj.familySex" name="familySex" ng-value="1"/>男
+                    <input type="radio" ng-model="obj.familySex" name="familySex" ng-value="0"/>女
+                </th>
+                <th>
+                    <input type="date" ng-model="obj.familyBrithday" name="familyBrithday">
+                </th>
+                <th>
+                    <input type="radio" ng-model="obj.familyVaccine" name="familyVaccine" ng-value="1"/>有
+                    <input type="radio" ng-model="obj.familyVaccine" name="familyVaccine" ng-value="0"/>无
+                </th>
+                <th>
+                    <input type="radio" ng-model="obj.familyLearn" name="familyLearn" ng-value="1"/>是
+                    <input type="radio" ng-model="obj.familyLearn" name="familyLearn" ng-value="0"/>否
+                </th>
+            </tr>
+            </tbody>
+        </table>
+            <center>
+                <button class="btn btn-success" data-toggle="modal" data-target="#chage" ng-click="save()" >保 存</button>
+                <button class="btn btn-success" data-toggle="modal" data-target="#chage" ng-click="next()" >下一项</button>
+            </center>
+        <tm-pagination conf="paginationConf"></tm-pagination>
+    </div>
+    <div align="center" style="border: 1px solid black; background-color: #97a0b3; width: 100%;height: 50px; position: fixed;bottom: 0; ">
+        <div style="border: 1px solid black; background-color: white; width: 50%;height: 30px; margin-top: 10px;"><span style="font-size: 20px">版权所有：公安局</span></div>
+    </div>
 </body>
 </html>
