--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -153,7 +153,7 @@
                             <option ng-repeat="re in userarea" ng-value="re.id">{{re.name}}</option>
                         </select>
                     </div>
-
+                    <input name="roleId" value="5" type="hidden">
                     <div class="form_btn" align="center">
                         <button type="button" onclick="regis()">立即注册</button>
                     </div>
